--- a/Woz.Functional/Woz.Functional.csproj
+++ b/Woz.Functional/Woz.Functional.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{37EF993B-BE7A-4E2E-AC27-7EF8DA5C8493}</ProjectGuid>
+    <ProjectGuid>{2C67B481-A544-4A2B-A2D0-958EC1769F93}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Woz.RogueEngine</RootNamespace>
-    <AssemblyName>Woz.RogueEngine</AssemblyName>
+    <RootNamespace>Woz.Functional</RootNamespace>
+    <AssemblyName>Woz.Functional</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -45,20 +45,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\Entity.cs" />
-    <Compile Include="Entities\EntityAttributes.cs" />
-    <Compile Include="Entities\EntityExtensions.cs" />
-    <Compile Include="Entities\EntityFlags.cs" />
+    <Compile Include="Maybe\MaybeImmutableDictionary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Woz.Functional\Woz.Functional.csproj">
-      <Project>{2C67B481-A544-4A2B-A2D0-958EC1769F93}</Project>
-      <Name>Woz.Functional</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
