--- a/Woz.Core/Woz.Core.csproj
+++ b/Woz.Core/Woz.Core.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{37EF993B-BE7A-4E2E-AC27-7EF8DA5C8493}</ProjectGuid>
+    <ProjectGuid>{E030E5BA-A70A-4023-92D7-D20A7F4102F4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Woz.RogueEngine</RootNamespace>
-    <AssemblyName>Woz.RogueEngine</AssemblyName>
+    <RootNamespace>Woz.Core</RootNamespace>
+    <AssemblyName>Woz.Core</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -34,11 +34,7 @@
       <HintPath>..\packages\Functional.Maybe.1.0.3\lib\Functional.Maybe.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Collections.Immutable">
-      <HintPath>..\packages\Microsoft.Bcl.Immutable.1.0.34\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
-    </Reference>
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,43 +42,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Definitions\EntityParser.cs" />
-    <Compile Include="Definitions\XmlAttributes.cs" />
-    <Compile Include="Definitions\XmlNames.cs" />
-    <Compile Include="Entities\ClothingLocations.cs" />
-    <Compile Include="Entities\DamageTypes.cs" />
-    <Compile Include="Entities\Entity.cs" />
-    <Compile Include="Entities\EntityAttributes.cs" />
-    <Compile Include="Operations\DoorOperations.cs" />
-    <Compile Include="Queries\CombatQueries.cs" />
-    <Compile Include="Queries\EntityQueries.cs" />
-    <Compile Include="Entities\EntityFlags.cs" />
-    <Compile Include="Entities\EntityStore.cs" />
-    <Compile Include="Entities\EntityType.cs" />
-    <Compile Include="Levels\ActorState.cs" />
-    <Compile Include="Levels\Level.cs" />
+    <Compile Include="Conversion\EnumConversions.cs" />
+    <Compile Include="Conversion\StringConversion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Queries\NavigationQueries.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Woz.Core\Woz.Core.csproj">
-      <Project>{e030e5ba-a70a-4023-92d7-d20a7f4102f4}</Project>
-      <Name>Woz.Core</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Woz.Functional\Woz.Functional.csproj">
-      <Project>{2C67B481-A544-4A2B-A2D0-958EC1769F93}</Project>
-      <Name>Woz.Functional</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Woz.Linq\Woz.Linq.csproj">
-      <Project>{1c394bd3-381e-4a26-9263-7e4057bd3bff}</Project>
-      <Name>Woz.Linq</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Definitions\EntityDefinitions.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
