Validation framework in place. Tweaks flatten to allow more advanced queries

--- a/Woz.RogueEngine/Woz.RogueEngine.csproj
+++ b/Woz.RogueEngine/Woz.RogueEngine.csproj
@@ -63,6 +63,8 @@
     <Compile Include="Levels\Level.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\NavigationQueries.cs" />
+    <Compile Include="Validation\DoorRules.cs" />
+    <Compile Include="Validation\DoorValidators.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
