--- a/Woz.BadlyDrawnRogue/Woz.BadlyDrawnRogue.csproj
+++ b/Woz.BadlyDrawnRogue/Woz.BadlyDrawnRogue.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -71,6 +72,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Woz.BadlyDrawnRogue.licenseheader" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
