--- a/Woz.Functional.Tests/Woz.Functional.Tests.csproj
+++ b/Woz.Functional.Tests/Woz.Functional.Tests.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C3F3571E-DB9E-44EF-B604-69FFB3CEF4EA}</ProjectGuid>
+    <ProjectGuid>{89744813-B6D1-4623-8CF9-F52AD8F138A1}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Woz.RogueEngine.Tests</RootNamespace>
-    <AssemblyName>Woz.RogueEngine.Tests</AssemblyName>
+    <RootNamespace>Woz.Functional.Tests</RootNamespace>
+    <AssemblyName>Woz.Functional.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -44,7 +44,6 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Microsoft.Bcl.Immutable.1.0.34\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
     </Reference>
-    <Reference Include="System.Runtime" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -59,19 +58,22 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="EntitiesTests\EntityFactoryTests.cs" />
-    <Compile Include="EntitiesTests\EntityTests.cs" />
+    <Compile Include="ErrorTests\ErrorOperationsTests.cs" />
+    <Compile Include="ErrorTests\ErrorTests.cs" />
+    <Compile Include="ErrorTests\ErrorLinqTests.cs" />
+    <Compile Include="GeneratorsTests\IdGeneratorTests.cs" />
+    <Compile Include="MaybeTests\MaybeImmutableDictionaryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Woz.RogueEngine\Woz.RogueEngine.csproj">
-      <Project>{37EF993B-BE7A-4E2E-AC27-7EF8DA5C8493}</Project>
-      <Name>Woz.RogueEngine</Name>
-    </ProjectReference>
+    <None Include="packages.config" />
+    <None Include="Woz.Functional.Tests.licenseheader" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
-    <None Include="Woz.RogueEngine.Tests.licenseheader" />
+    <ProjectReference Include="..\Woz.Functional\Woz.Functional.csproj">
+      <Project>{2C67B481-A544-4A2B-A2D0-958EC1769F93}</Project>
+      <Name>Woz.Functional</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
