--- a/Woz.Functional/Woz.Functional.csproj
+++ b/Woz.Functional/Woz.Functional.csproj
@@ -30,9 +30,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Functional.Maybe">
-      <HintPath>..\packages\Functional.Maybe.1.0.3\lib\Functional.Maybe.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Collections.Immutable">
       <HintPath>..\packages\Microsoft.Bcl.Immutable.1.0.34\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
@@ -40,8 +37,16 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Try\TryFailed.cs" />
-    <Compile Include="Try\TrySuccess.cs" />
+    <Compile Include="Maybe\IMaybe.cs" />
+    <Compile Include="Maybe\Maybe.cs" />
+    <Compile Include="Maybe\MaybeConversion.cs" />
+    <Compile Include="Maybe\MaybeEnumerable.cs" />
+    <Compile Include="Maybe\MaybeFunctionalWrappers.cs" />
+    <Compile Include="Maybe\MaybeLinq.cs" />
+    <Compile Include="Maybe\Nothing.cs" />
+    <Compile Include="Maybe\Some.cs" />
+    <Compile Include="Try\Failed.cs" />
+    <Compile Include="Try\Success.cs" />
     <Compile Include="Try\TryLinq.cs" />
     <Compile Include="Try\ErrorOperations.cs" />
     <Compile Include="Try\ITry.cs" />
