--- a/Woz.Functional.Tests/Woz.Functional.Tests.csproj
+++ b/Woz.Functional.Tests/Woz.Functional.Tests.csproj
@@ -54,12 +54,14 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="TryTests\ErrorOperationsTests.cs" />
-    <Compile Include="TryTests\ITryTests.cs" />
-    <Compile Include="TryTests\ErrorLinqTests.cs" />
+    <Compile Include="TryTests\TryConversionsTests.cs" />
+    <Compile Include="TryTests\TryTests.cs" />
+    <Compile Include="TryTests\TryLinqTests.cs" />
     <Compile Include="GeneratorsTests\IdGeneratorTests.cs" />
     <Compile Include="MaybeTests\MaybeImmutableDictionaryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ValidationTests\ValidationLinqTests.cs" />
+    <Compile Include="ValidationTests\ValidationTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
