Some extra functionality in Maybe as some more tests

--- a/Woz.Functional.Tests/Woz.Functional.Tests.csproj
+++ b/Woz.Functional.Tests/Woz.Functional.Tests.csproj
@@ -54,6 +54,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="MaybeTests\MaybeTests.cs" />
     <Compile Include="TryTests\TryConversionsTests.cs" />
     <Compile Include="TryTests\TryTests.cs" />
     <Compile Include="TryTests\TryLinqTests.cs" />
