--- a/Woz.Functional/Woz.Functional.csproj
+++ b/Woz.Functional/Woz.Functional.csproj
@@ -37,6 +37,9 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IO\IO.cs" />
+    <Compile Include="IO\IOHelpers.cs" />
+    <Compile Include="IO\IOLinq.cs" />
     <Compile Include="Maybe\IMaybe.cs" />
     <Compile Include="Maybe\Maybe.cs" />
     <Compile Include="Maybe\MaybeConversion.cs" />
