Goodbye Bind. Pointless indirection in the context of the C# monad engine that is Linq

--- a/Woz.Functional/Woz.Functional.csproj
+++ b/Woz.Functional/Woz.Functional.csproj
@@ -38,28 +38,23 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Monads\IOMonad\IO.cs" />
-    <Compile Include="Monads\IOMonad\IOLinq.cs" />
     <Compile Include="Monads\MaybeMonad\IMaybe.cs" />
     <Compile Include="Monads\MaybeMonad\Maybe.cs" />
-    <Compile Include="Monads\MaybeMonad\MaybeConversion.cs" />
     <Compile Include="Monads\MaybeMonad\MaybeEnumerable.cs" />
     <Compile Include="Monads\MaybeMonad\MaybeTryGet.cs" />
-    <Compile Include="Monads\MaybeMonad\MaybeLinq.cs" />
     <Compile Include="Monads\MaybeMonad\Nothing.cs" />
     <Compile Include="Monads\MaybeMonad\Some.cs" />
     <Compile Include="Monads\TryMonad\Failed.cs" />
     <Compile Include="Monads\TryMonad\Success.cs" />
-    <Compile Include="Monads\TryMonad\TryLinq.cs" />
-    <Compile Include="Monads\TryMonad\TryConversions.cs" />
+    <Compile Include="Monads\TryMonad\Try.cs" />
     <Compile Include="Monads\TryMonad\ITry.cs" />
     <Compile Include="Generators\IdGenerator.cs" />
     <Compile Include="Monads\MaybeMonad\MaybeDictionaryLookup.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Monads\ValidationMonad\ValidationConversions.cs" />
+    <Compile Include="Monads\ValidationMonad\Validator.cs" />
     <Compile Include="Monads\ValidationMonad\Invalid.cs" />
     <Compile Include="Monads\ValidationMonad\IValidation.cs" />
     <Compile Include="Monads\ValidationMonad\Valid.cs" />
-    <Compile Include="Monads\ValidationMonad\ValidationLinq.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
