--- a/Woz.RogueEngine/Woz.RogueEngine.csproj
+++ b/Woz.RogueEngine/Woz.RogueEngine.csproj
@@ -54,8 +54,10 @@
     <Compile Include="Entities\TileTypes.cs" />
     <Compile Include="Levels\IActorState.cs" />
     <Compile Include="Levels\ILevel.cs" />
+    <Compile Include="Operations\ActorStoreOperations.cs" />
     <Compile Include="Operations\EntityOperations.cs" />
     <Compile Include="Operations\LevelOperations.cs" />
+    <Compile Include="Operations\TileStoreOperations.cs" />
     <Compile Include="Queries\CombatQueries.cs" />
     <Compile Include="Queries\EntityQueries.cs" />
     <Compile Include="Entities\EntityFlags.cs" />
