--- a/Woz.Core.Tests/Woz.Core.Tests.csproj
+++ b/Woz.Core.Tests/Woz.Core.Tests.csproj
@@ -36,6 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Drawing" />
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -52,6 +53,7 @@
   <ItemGroup>
     <Compile Include="ConversionTests\EnumConversionTests.cs" />
     <Compile Include="ConversionTests\StringConversionTests.cs" />
+    <Compile Include="DrawingTests\PointExtensionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SingletonTests.cs" />
   </ItemGroup>
