--- a/Woz.RogueEngine/Woz.RogueEngine.csproj
+++ b/Woz.RogueEngine/Woz.RogueEngine.csproj
@@ -53,12 +53,14 @@
     <Compile Include="Entities\IEntity.cs" />
     <Compile Include="Entities\IEntityFactory.cs" />
     <Compile Include="Entities\TileTypes.cs" />
+    <Compile Include="Levels\ActorManager.cs" />
     <Compile Include="Levels\IActorState.cs" />
+    <Compile Include="Levels\IActorManager.cs" />
     <Compile Include="Levels\ILevel.cs" />
-    <Compile Include="Operations\ActorStoreOperations.cs" />
+    <Compile Include="Levels\ITileManager.cs" />
+    <Compile Include="Levels\TileManager.cs" />
     <Compile Include="Operations\EntityOperations.cs" />
     <Compile Include="Operations\LevelOperations.cs" />
-    <Compile Include="Operations\TileStoreOperations.cs" />
     <Compile Include="Queries\CombatQueries.cs" />
     <Compile Include="Queries\EntityQueries.cs" />
     <Compile Include="Entities\EntityFlags.cs" />
