--- a/Woz.Functional/Woz.Functional.csproj
+++ b/Woz.Functional/Woz.Functional.csproj
@@ -44,6 +44,8 @@
     <Compile Include="Monads\MaybeMonad\MaybeTryGet.cs" />
     <Compile Include="Monads\MaybeMonad\Nothing.cs" />
     <Compile Include="Monads\MaybeMonad\Some.cs" />
+    <Compile Include="Monads\State\State.cs" />
+    <Compile Include="Monads\State\StateResult.cs" />
     <Compile Include="Monads\TryMonad\Failed.cs" />
     <Compile Include="Monads\TryMonad\Success.cs" />
     <Compile Include="Monads\TryMonad\Try.cs" />
@@ -55,6 +57,7 @@
     <Compile Include="Monads\ValidationMonad\Invalid.cs" />
     <Compile Include="Monads\ValidationMonad\IValidation.cs" />
     <Compile Include="Monads\ValidationMonad\Valid.cs" />
+    <Compile Include="Unit.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
