--- a/Woz.Functional.Tests/Woz.Functional.Tests.csproj
+++ b/Woz.Functional.Tests/Woz.Functional.Tests.csproj
@@ -56,11 +56,14 @@
   <ItemGroup>
     <Compile Include="MonadsTests\IOMonadTests\IOTests.cs" />
     <Compile Include="MonadsTests\MaybeMonadTests\MaybeTests.cs" />
+    <Compile Include="MonadsTests\StateMonadTests\StateResultTests.cs" />
+    <Compile Include="MonadsTests\StateMonadTests\StateTests.cs" />
     <Compile Include="MonadsTests\TryMonadTests\TryTests.cs" />
     <Compile Include="GeneratorsTests\IdGeneratorTests.cs" />
     <Compile Include="MonadsTests\MaybeMonadTests\MaybeDictionaryLookupTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MonadsTests\ValidationMonadTests\ValidationTests.cs" />
+    <Compile Include="UnitTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
