--- a/Woz.Lenses.Tests/Woz.Lenses.Tests.csproj
+++ b/Woz.Lenses.Tests/Woz.Lenses.Tests.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{89744813-B6D1-4623-8CF9-F52AD8F138A1}</ProjectGuid>
+    <ProjectGuid>{ED5869C9-0973-40EB-B9D7-9AFC1B7C8CE7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Woz.Functional.Tests</RootNamespace>
-    <AssemblyName>Woz.Functional.Tests</AssemblyName>
+    <RootNamespace>Woz.Lenses.Tests</RootNamespace>
+    <AssemblyName>Woz.Lenses.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -36,10 +36,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Collections.Immutable, Version=1.0.34.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Microsoft.Bcl.Immutable.1.0.34\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -54,25 +50,17 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="MonadsTests\IOMonadTests\IOTests.cs" />
-    <Compile Include="MonadsTests\MaybeMonadTests\MaybeTests.cs" />
-    <Compile Include="MonadsTests\StateMonadTests\StateResultTests.cs" />
-    <Compile Include="MonadsTests\StateMonadTests\StateTests.cs" />
-    <Compile Include="MonadsTests\TryMonadTests\TryTests.cs" />
-    <Compile Include="GeneratorsTests\IdGeneratorTests.cs" />
-    <Compile Include="MonadsTests\MaybeMonadTests\MaybeDictionaryLookupTests.cs" />
+    <Compile Include="ImmutableDictionaryLensTests.cs" />
+    <Compile Include="LensTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="MonadsTests\ValidationMonadTests\ValidationTests.cs" />
-    <Compile Include="UnitTests.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
-    <None Include="Woz.Functional.Tests.licenseheader" />
+    <None Include="Woz.Lenses.Tests.licenseheader" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Woz.Functional\Woz.Functional.csproj">
-      <Project>{2C67B481-A544-4A2B-A2D0-958EC1769F93}</Project>
-      <Name>Woz.Functional</Name>
+    <ProjectReference Include="..\Woz.Lenses\Woz.Lenses.csproj">
+      <Project>{95E4674D-638D-4B89-8732-106F10D27B1C}</Project>
+      <Name>Woz.Lenses</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
