--- a/Woz.Lenses/Woz.Lenses.csproj
+++ b/Woz.Lenses/Woz.Lenses.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{2C67B481-A544-4A2B-A2D0-958EC1769F93}</ProjectGuid>
+    <ProjectGuid>{95E4674D-638D-4B89-8732-106F10D27B1C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Woz.Functional</RootNamespace>
-    <AssemblyName>Woz.Functional</AssemblyName>
+    <RootNamespace>Woz.Lenses</RootNamespace>
+    <AssemblyName>Woz.Lenses</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -35,33 +35,26 @@
       <HintPath>..\packages\Microsoft.Bcl.Immutable.1.0.34\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
     </Reference>
     <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Monads\IOMonad\IO.cs" />
-    <Compile Include="Monads\MaybeMonad\IMaybe.cs" />
-    <Compile Include="Monads\MaybeMonad\Maybe.cs" />
-    <Compile Include="Monads\MaybeMonad\MaybeEnumerable.cs" />
-    <Compile Include="Monads\MaybeMonad\MaybeTryGet.cs" />
-    <Compile Include="Monads\MaybeMonad\Nothing.cs" />
-    <Compile Include="Monads\MaybeMonad\Some.cs" />
-    <Compile Include="Monads\StateMonad\State.cs" />
-    <Compile Include="Monads\StateMonad\StateResult.cs" />
-    <Compile Include="Monads\TryMonad\Failed.cs" />
-    <Compile Include="Monads\TryMonad\Success.cs" />
-    <Compile Include="Monads\TryMonad\Try.cs" />
-    <Compile Include="Monads\TryMonad\ITry.cs" />
-    <Compile Include="Generators\IdGenerator.cs" />
-    <Compile Include="Monads\MaybeMonad\MaybeDictionaryLookup.cs" />
+    <Compile Include="ImmutableDictionaryLens.cs" />
+    <Compile Include="Lens.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Monads\ValidationMonad\Validator.cs" />
-    <Compile Include="Monads\ValidationMonad\Invalid.cs" />
-    <Compile Include="Monads\ValidationMonad\IValidation.cs" />
-    <Compile Include="Monads\ValidationMonad\Valid.cs" />
-    <Compile Include="Unit.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="Woz.Functional.licenseheader" />
+    <None Include="Woz.Lenses.licenseheader" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Woz.Functional\Woz.Functional.csproj">
+      <Project>{2C67B481-A544-4A2B-A2D0-958EC1769F93}</Project>
+      <Name>Woz.Functional</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
