--- a/Woz.Lenses/Woz.Lenses.csproj
+++ b/Woz.Lenses/Woz.Lenses.csproj
@@ -35,6 +35,7 @@
       <HintPath>..\packages\Microsoft.Bcl.Immutable.1.0.34\lib\portable-net45+win8+wp8+wpa81\System.Collections.Immutable.dll</HintPath>
     </Reference>
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ImmutableDictionaryLens.cs" />
+    <Compile Include="ImmutableGridLens.cs" />
     <Compile Include="Lens.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -54,6 +56,10 @@
     <ProjectReference Include="..\Woz.Functional\Woz.Functional.csproj">
       <Project>{2C67B481-A544-4A2B-A2D0-958EC1769F93}</Project>
       <Name>Woz.Functional</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Woz.Immutable\Woz.Immutable.csproj">
+      <Project>{E7F50371-A7C5-4B42-AB7F-DBCE7FBA1099}</Project>
+      <Name>Woz.Immutable</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
