Lenses were worth it, immutable manipulation easier. Major overhaul of level structure, because lenses. Validation tentative steps, needs work but looking good

--- a/Woz.Lenses/Woz.Lenses.csproj
+++ b/Woz.Lenses/Woz.Lenses.csproj
@@ -46,6 +46,7 @@
     <Compile Include="ImmutableDictionaryLens.cs" />
     <Compile Include="ImmutableGridLens.cs" />
     <Compile Include="Lens.cs" />
+    <Compile Include="MaybeLens.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
