--- a/Woz.RogueEngine/Woz.RogueEngine.csproj
+++ b/Woz.RogueEngine/Woz.RogueEngine.csproj
@@ -41,37 +41,39 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\Command.cs" />
-    <Compile Include="DebugHelpers\DebugAssertHelpers.cs" />
     <Compile Include="Definitions\EntityParser.cs" />
     <Compile Include="Definitions\XmlAttributes.cs" />
     <Compile Include="Definitions\XmlNames.cs" />
-    <Compile Include="Entities\ActorType.cs" />
-    <Compile Include="Entities\ClothingLocations.cs" />
-    <Compile Include="Entities\DamageTypes.cs" />
-    <Compile Include="Entities\Entity.cs" />
-    <Compile Include="Entities\EntityAttributes.cs" />
-    <Compile Include="Entities\EntityLens.cs" />
-    <Compile Include="Entities\IEntityFactory.cs" />
-    <Compile Include="Entities\TileTypes.cs" />
+    <Compile Include="Entities\Actor.cs" />
+    <Compile Include="Entities\ActorLens.cs" />
     <Compile Include="Levels\ActorStateLens.cs" />
+    <Compile Include="Entities\ActorTypes.cs" />
+    <Compile Include="Entities\DamageTypes.cs" />
+    <Compile Include="Entities\ThingLens.cs" />
+    <Compile Include="Entities\ThingTypes.cs" />
+    <Compile Include="Entities\EquipmentSlots.cs" />
+    <Compile Include="Entities\HitPoints.cs" />
+    <Compile Include="Entities\HitPointsLens.cs" />
     <Compile Include="Levels\LevelLens.cs" />
+    <Compile Include="Entities\StatisticTypes.cs" />
+    <Compile Include="Entities\Thing.cs" />
+    <Compile Include="Levels\Tile.cs" />
+    <Compile Include="Levels\TileLens.cs" />
+    <Compile Include="Levels\TileTypes.cs" />
     <Compile Include="Operations\InteractionTarget.cs" />
     <Compile Include="Operations\LevelOperations.cs" />
     <Compile Include="Queries\CombatQueries.cs" />
     <Compile Include="Queries\EntityQueries.cs" />
-    <Compile Include="Entities\EntityFlags.cs" />
-    <Compile Include="Entities\EntityFactory.cs" />
-    <Compile Include="Entities\EntityType.cs" />
     <Compile Include="Levels\ActorState.cs" />
     <Compile Include="Levels\Level.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\NavigationQueries.cs" />
     <Compile Include="Rules\ActorRules.cs" />
-    <Compile Include="Rules\EntityRules.cs" />
     <Compile Include="Rules\LevelRules.cs" />
-    <Compile Include="Rules\RuleHelpers.cs" />
     <Compile Include="Rules\TileRules.cs" />
+    <Compile Include="Rules\TypeGroups.cs" />
     <Compile Include="Validators\LevelValidators.cs" />
+    <Compile Include="Validators\CommandValidators.cs" />
     <Compile Include="Validators\TileValidators.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -99,6 +101,9 @@
       <Project>{5765091d-856c-41d4-b97e-aa7a3d0ed5ba}</Project>
       <Name>Woz.Monads</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DebugHelpers\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
