Actor unit tests. Start building engine tests as not been in code for a while. Test proved worth already, With bug fixed :)

--- a/Woz.RogueEngine.Tests/Woz.RogueEngine.Tests.csproj
+++ b/Woz.RogueEngine.Tests/Woz.RogueEngine.Tests.csproj
@@ -55,8 +55,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="EntitiesTests\EntityFactoryTests.cs" />
-    <Compile Include="EntitiesTests\EntityTests.cs" />
+    <Compile Include="EntitiesTests\ActorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
