--- a/Woz.RogueEngine.Tests/packages.config
+++ b/Woz.RogueEngine.Tests/packages.config
@@ -2,4 +2,5 @@
 
 <packages>
   <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net45" />
+  <package id="Moq" version="4.2.1502.0911" targetFramework="net45" />
 </packages>
