--- a/Woz.RogueEngine/Woz.RogueEngine.csproj
+++ b/Woz.RogueEngine/Woz.RogueEngine.csproj
@@ -46,24 +46,24 @@
     <Compile Include="Definitions\EntityParser.cs" />
     <Compile Include="Definitions\XmlAttributes.cs" />
     <Compile Include="Definitions\XmlNames.cs" />
-    <Compile Include="Entities\Actor.cs" />
-    <Compile Include="Entities\ActorLens.cs" />
+    <Compile Include="Levels\Actor.cs" />
+    <Compile Include="Levels\ActorLens.cs" />
     <Compile Include="Events\Event.cs" />
     <Compile Include="Events\EventFactory.cs" />
     <Compile Include="Events\EventDetails.cs" />
     <Compile Include="Events\EventTypes.cs" />
     <Compile Include="Events\TargetTypes.cs" />
     <Compile Include="Levels\ActorStateLens.cs" />
-    <Compile Include="Entities\ActorTypes.cs" />
-    <Compile Include="Entities\DamageTypes.cs" />
-    <Compile Include="Entities\ThingLens.cs" />
-    <Compile Include="Entities\ThingTypes.cs" />
-    <Compile Include="Entities\EquipmentSlots.cs" />
-    <Compile Include="Entities\HitPoints.cs" />
-    <Compile Include="Entities\HitPointsLens.cs" />
+    <Compile Include="Levels\ActorTypes.cs" />
+    <Compile Include="Levels\DamageTypes.cs" />
+    <Compile Include="Levels\ThingLens.cs" />
+    <Compile Include="Levels\ThingTypes.cs" />
+    <Compile Include="Levels\EquipmentSlots.cs" />
+    <Compile Include="Levels\HitPoints.cs" />
+    <Compile Include="Levels\HitPointsLens.cs" />
     <Compile Include="Levels\LevelLens.cs" />
-    <Compile Include="Entities\StatisticTypes.cs" />
-    <Compile Include="Entities\Thing.cs" />
+    <Compile Include="Levels\StatisticTypes.cs" />
+    <Compile Include="Levels\Thing.cs" />
     <Compile Include="Levels\Tile.cs" />
     <Compile Include="Levels\TileLens.cs" />
     <Compile Include="Levels\TileTypes.cs" />
